<resources>
    <string name="app_name">PickFileAndCapture</string>
    <string name="nama_file">Nama File :</string>
    <string name="path_file">Path File :</string>
    <string name="todo">TODO</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="file">File</string>
</resources>