<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/noimage"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/namaFile"
        android:layout_marginTop="25dp"
        android:layout_below="@id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_file" />

    <TextView
        android:id="@+id/pathFile"
        android:layout_marginTop="10dp"
        android:layout_below="@id/namaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/path_file" />

    <LinearLayout
        android:id="@+id/layBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/pathFile"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPickImage"
            android:text="@string/image"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnCamera"
            android:text="@string/camera"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layBtn1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPickAudio"
            android:text="@string/audio"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnPickVideo"
            android:text="@string/video"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layBtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layBtn2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPickFile"
            android:text="@string/file"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>